refactor(command): implement prompt system for commands and update command registration and execution to use prompts